add form radio buttons

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,10 @@
 
   <form>
     <input name="potato" />
+    author
+    <input type="radio" name="tomato" value="author" />
+    title
+    <input type="radio" name="tomato" value="title" />
     <input type="submit" />
   </form>
   <main>
